# mrestapi

./: .gitignore  CMakeLists.txt  README.md  mimagerequest.cpp  mimagerequest.h  mmultipartrequest.cpp  mmultipartrequest.h  mrestapi.doxyfile  mrestapi.pri  mrestrequest.cpp  mrestrequest.h  mrestrequestmanager.cpp  mrestrequestmanager.h
example/: RestAPICommunication.pro  config.cpp  config.h  main.cpp
example/mrBabu/: address.cpp  address.h  addressptr.h  session.cpp  session.h  user.cpp  user.h  userptr.h
example/openWeatherMap/: weather.cpp  weather.h
example/restCommunicationStuff/: mrbaburequest.cpp  mrbaburequest.h  mrbaburequestconfig.cpp  mrbaburequestconfig.h  openweathermaprequest.cpp  openweathermaprequest.h  openweathermaprequestconfig.cpp  openweathermaprequestconfig.h  restapiclient.cpp  restapiclient.h
example/restCommunicationStuff/mrbaburequests/: loginrequest.cpp  loginrequest.h  logoutrequest.cpp  logoutrequest.h  registerrequest.cpp  registerrequest.h  userinforequest.cpp  userinforequest.h
example/restCommunicationStuff/openweathermaprequests/: weatherbycitynamerequest.cpp  weatherbycitynamerequest.h
restCommunicationCore/: mconfig.cpp  mconfig.h  mrestrequest.cpp  mrestrequest.h  mrestrequestconfig.cpp  mrestrequestconfig.h  mrestrequestmanager.cpp  mrestrequestmanager.h  mrestrequestptr.h  mrestrequestqueue.cpp  mrestrequestqueue.h
tst_mrestapi/: CMakeLists.txt  restapiclient.cpp  restapiclient.h  testrequest.cpp  tst_mrestapi.cpp  tst_mrestapi.pro  tst_restrequest.cpp  weatherbycitynamerequest.cpp  weatherbycitynamerequest.h
